--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day 2 : Learning</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h3>Learning CSS</h3>
-    <hr />
+    <div>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+      <p>This is a div</p>
+    </div>
   </body>
 </html>
