--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div>
-      <p>This is a div</p>
+    <div id="outer">
+      <div id="inner"></div>
     </div>
   </body>
 </html>
