--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="outer">
-      <div id="inner"></div>
-    </div>
+    <div id="outer"></div>
   </body>
 </html>
