--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="outer"></div>
+    <div id="outer">
+      <div id="inner"></div>
+    </div>
   </body>
 </html>
