--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="outer"></div>
+    <div id="outer">
+      <p id="para">A line of text</p>
+    </div>
+
+    <p>Another p tag</p>
   </body>
 </html>
