--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <div id="outer">
       <span>0</span>
-      <p id="para">A line of text <span>This is span</span></p>
+      <p id="p-tag" style="color: blue">
+        A line of text <span>This is span</span>
+      </p>
     </div>
 
     <p>Another p tag</p>
