--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="outer">
-      <span>0</span>
-      <p id="p-tag" style="color: blue">
-        A line of text <span>This is span</span>
-      </p>
-    </div>
+    <h3 class="header-1">This is header 1</h3>
+    <h3 class="header-1">This is header 2</h3>
+    <h3 class="header-1">This is header 3</h3>
+    <h3>This is header 4</h3>
+    <h3>This is header 5</h3>
 
-    <p>Another p tag</p>
+    <p class="header-1">This is paragraph!</p>
+
+    <div class="header-1"><p>This is div</p></div>
+
+    <span class="header-1">This is span</span>
   </body>
 </html>
