--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h3 class="header-1">This is header 1</h3>
+    <h3 class="notification">This is header 1</h3>
     <h3 class="header-1">This is header 2</h3>
     <h3 class="header-1">This is header 3</h3>
     <h3>This is header 4</h3>
