--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
   </head>
   <body>
     <h3 class="notification">This is header 1</h3>
-    <h3 class="header-1">This is header 2</h3>
-    <h3 class="header-1">This is header 3</h3>
-    <h3>This is header 4</h3>
+
     <h3>This is header 5</h3>
 
-    <p class="header-1">This is paragraph!</p>
+    <p>This is paragraph!</p>
 
-    <div class="header-1"><p>This is div</p></div>
+    <div>This is div</div>
 
-    <span class="header-1">This is span</span>
+    <span>This is span</span>
+
+    <ul>
+      <li>Hi there</li>
+    </ul>
+
+    <h2 id="topic-1">Topic 1</h2>
+    <h2 class="topic-2">Topic 2</h2>
   </body>
 </html>
