--- a/index.html
+++ b/index.html
@@ -7,21 +7,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h3 class="notification">This is header 1</h3>
-
-    <h3>This is header 5</h3>
-
-    <p>This is paragraph!</p>
-
-    <div>This is div</div>
-
-    <span>This is span</span>
-
-    <ul>
-      <li>Hi there</li>
-    </ul>
-
-    <h2 id="topic-1">Topic 1</h2>
-    <h2 class="topic-2">Topic 2</h2>
+    <p>This is paragraph Outside 1</p>
+    <div class="d-1">
+      <p>This is paragraph 1</p>
+      <div>
+        <p>This is paragraph 2</p>
+        <div>
+          <p>This is paragraph 3</p>
+        </div>
+      </div>
+    </div>
+    <p>This is paragraph Outside 2</p>
   </body>
 </html>
