--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <p>This is paragraph Outside 1</p>
-    <div class="d-1">
-      <p>This is paragraph 1</p>
-      <div>
-        <p>This is paragraph 2</p>
-        <div>
-          <p>This is paragraph 3</p>
-        </div>
-      </div>
+    <div id="outer">
+      <div class="inner"></div>
     </div>
-    <p>This is paragraph Outside 2</p>
   </body>
 </html>
