--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="outer">
-      <div class="inner"></div>
-    </div>
+    <p>I have a <button>Button 1</button> here!</p>
+
+    <button>Button 2</button>
+    <button>Button 3</button>
   </body>
 </html>
