--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <p>I have a <button>Button 1</button> here!</p>
+    <p>
+      I have a <a href="#" class="button">Button 1 Has got a long text</a> here!
+    </p>
+    <p>I have a <a href="#" class="button">Button 1</a> here!</p>
+    <p>I have a <a href="#" class="button">B</a> here!</p>
 
-    <button>Button 2</button>
-    <button>Button 3</button>
+    <button class="button">Button 2</button>
+    <button class="button">Button 3</button>
   </body>
 </html>
