change the class name

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <p>
-      I have a <a href="#" class="button">Button 1 Has got a long text</a> here!
+      I have a <a href="#" class="btn">Button 1 Has got a long text</a> here!
     </p>
-    <p>I have a <a href="#" class="button">Button 1</a> here!</p>
-    <p>I have a <a href="#" class="button">B</a> here!</p>
+    <p>I have a <a href="#" class="btn">Button 1</a> here!</p>
+    <p>I have a <a href="#" class="btn">B</a> here!</p>
 
-    <button class="button">Button 2</button>
-    <button class="button">Button 3</button>
+    <button class="btn">Button 2</button>
+    <button class="btn">Button 3</button>
   </body>
 </html>
