--- a/index.html
+++ b/index.html
@@ -7,13 +7,59 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <p>
-      I have a <a href="#" class="btn">Button 1 Has got a long text</a> here!
-    </p>
-    <p>I have a <a href="#" class="btn">Button 1</a> here!</p>
-    <p>I have a <a href="#" class="btn">B</a> here!</p>
+    <div class="card-container">
+      <h2>Our Offerings</h2>
+      <hr />
+      <div class="card">
+        <div class="card-header">
+          <h3>Card Header</h3>
+        </div>
 
-    <button class="btn">Button 2</button>
-    <button class="btn">Button 3</button>
+        <div class="card-body">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <hr />
+          <div class="card-footer">
+            <p>Card footer here</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <h3>Card Header</h3>
+        </div>
+
+        <div class="card-body">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <hr />
+          <div class="card-footer">
+            <p>Card footer here</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <h3>Card Header</h3>
+        </div>
+
+        <div class="card-body">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <hr />
+          <div class="card-footer">
+            <p>Card footer here</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
