--- a/index.html
+++ b/index.html
@@ -7,59 +7,23 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="card-container">
-      <h2>Our Offerings</h2>
-      <hr />
-      <div class="card">
-        <div class="card-header">
-          <h3>Card Header</h3>
-        </div>
-
-        <div class="card-body">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <hr />
-          <div class="card-footer">
-            <p>Card footer here</p>
-          </div>
-        </div>
+    <div class="navbar">
+      <div class="nav-item">
+        <a href="#">Contact</a>
       </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Card Header</h3>
-        </div>
-
-        <div class="card-body">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <hr />
-          <div class="card-footer">
-            <p>Card footer here</p>
-          </div>
-        </div>
+      <div class="nav-item">
+        <a href="#">News</a>
       </div>
-
-      <div class="card">
-        <div class="card-header">
-          <h3>Card Header</h3>
-        </div>
-
-        <div class="card-body">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <hr />
-          <div class="card-footer">
-            <p>Card footer here</p>
-          </div>
-        </div>
+      <div class="nav-item">
+        <a href="#">About</a>
       </div>
+      <div class="nav-item">
+        <a href="#">Home</a>
+      </div>
+    </div>
+
+    <div>
+      <p>This is after the outer div</p>
     </div>
   </body>
 </html>
