--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div class="navbar">
+      <div class="logo-holder">
+        <div class="logo"></div>
+        <h2>Flower Company</h2>
+      </div>
+
       <div class="nav-item">
         <a href="#">Contact</a>
       </div>
