--- a/index.html
+++ b/index.html
@@ -7,28 +7,33 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="navbar">
-      <div class="logo-holder">
-        <div class="logo"></div>
-        <h2>Flower Company</h2>
+    <h2>Learning Flexbox</h2>
+    <hr />
+    <div class="alert-container">
+      <div class="alert-header">
+        <div class="alert-title">
+          <h2>Customer Information</h2>
+        </div>
+        <div class="customer-details">
+          <p>John Doe</p>
+          <p>1234567890</p>
+        </div>
       </div>
-
-      <div class="nav-item">
-        <a href="#">Contact</a>
+      <hr />
+      <div class="alert-body">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </p>
       </div>
-      <div class="nav-item">
-        <a href="#">News</a>
+      <div class="alert-footer">
+        <button>Ok</button>
+        <button>Canel</button>
       </div>
-      <div class="nav-item">
-        <a href="#">About</a>
-      </div>
-      <div class="nav-item">
-        <a href="#">Home</a>
-      </div>
-    </div>
-
-    <div>
-      <p>This is after the outer div</p>
     </div>
   </body>
 </html>
