--- a/index.html
+++ b/index.html
@@ -7,32 +7,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>Learning Flexbox</h2>
-    <hr />
-    <div class="alert-container">
-      <div class="alert-header">
-        <div class="alert-title">
-          <h2>Customer Information</h2>
-        </div>
-        <div class="customer-details">
-          <p>John Doe</p>
-          <p>1234567890</p>
-        </div>
-      </div>
-      <hr />
-      <div class="alert-body">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur.
-        </p>
-      </div>
-      <div class="alert-footer">
-        <button>Ok</button>
-        <button>Canel</button>
+    <div class="wrapper">
+      <nav>
+        <h2>Documentation Project</h2>
+      </nav>
+      <div class="page-container">
+        <aside class="left-sidenav"></aside>
+        <main></main>
+        <aside class="right-sidenav"></aside>
       </div>
     </div>
   </body>
